--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/Airports
 spring.datasource.username=postgres
 spring.datasource.password=Alexandra2000
+logging.level.org=INFO
 
 spring.jpa.show-sql=true
 
